# gpt_for_wiki

./: .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  chat_processor.py  chat_request.py  docker-compose.yml  prompts.py  pyproject.toml  scratch.py  utils.py
.github/workflows/: cd.yaml  ci.yaml
gpt_prompts/: prompts.py  test.py
linkmark_client/: linkmark_workflow.py
