[tool.poetry]
name = "gpt-for-wiki"
version = "0.1.0"
description = "GPT for wikiznak"
authors = ["movedinlights <alekudryavtsev@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt_for_wiki"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.14.0"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
pre-commit = "^3.7.0"
gunicorn = "^22.0.0"
pillow = "^10.3.0"
bs4 = "^0.0.2"
flask-cors = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
exclude = [
    "office/migrations/",
    "users/migrations/",
    "tests/",
    ".venv/",
    ".tox/",
    ".git/",
    ".mypy_cache/",
    "_build/",
    "buck-out/",
    "build/",
    "dist/",
    "node_modules/",
    ".eggs/",
    ".pytest_cache/",
    ".cache/",
    ".ropeproject/",
    ".vscode/",
    ".idea/",
    ".ipynb_checkpoints/",
    ".DS_Store/",
    ".coverage/",
    ".coverage.*",
    "gpt_prompts/"
]
